@@ -5,7 +5,7 @@ See the file "license.terms" for information on usage and redistribution
 of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 
 Version: 3.1.0
-Last Modified: Tue Aug  1 23:48:20 PDT 2000
+Last Modified: Sat Aug 26 23:15:20 PDT 2000
 
 QUICK START
 
@@ -14,6 +14,9 @@ This uses the cmdline, base64, ncgi, and html
 modules of the Standard Tcl Library. If you must, you
 can probably get by with Tcl 8.0 or later if you install
 the Standard Tcl Library.
+
+The TclPro 1.4 distribution comes with everything you need
+to run TclHttpd.
 
 The Web server runs under either tclsh or wish.
 With wish you get a simple GUI that shows some counters.
